tdf#119133: Fix initial file and folder selection

what d7fc00e1f7ab7a44e6102a and 1af4ab72e2488515fcaede already does
for kde5

Change-Id: I924bdc5cfd6a12ff7bdbeef36d606c03307cb99b
Reviewed-on: https://gerrit.libreoffice.org/58832
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 87a4623a8dd5c9efed8335bb56145b9ea9dcce36)